--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   min-width: 40vw;
-  max-width: 44vw;
+  max-width: 60vw;
   padding: 4px;
   background-color: orange;
 }
